Fixes around packaging (release 0.9.5)

--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -7,5 +7,5 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} %5p %c{1}:%L - %m%n
 
 # Set this to the log level for weatherbill classes
-log4j.logger.com.climate=debug
-log4j.logger.lemur=debug
+#log4j.logger.com.climate=debug
+#log4j.logger.lemur=debug
