Upgrade clojure dependency to 1.5.1
Added profile declarations to project.clj so that you can do

    lein with-profile +1.3 $TASK
    lein with-profile +1.4 $TASK

to use an older version of Clojure.

Also modified the lein macro in build.xml so that ant can run leiningen
with arguments, like

    ant package -Dargs="with-profile 1.3"

--- a/build.xml
+++ b/build.xml
@@ -1,10 +1,14 @@
 <project name="Lemur" default="package" basedir=".">
 
+  <!-- Define default for ${args} in the lein exec below. -->
+  <property name="args" value="" />
+
   <macrodef name="lein">
     <element name="lein-params" implicit="true"/>
     <sequential>
       <exec executable="lein2" failonerror="yes"
             dir="${basedir}">
+        <arg line="${args}"/>
         <env key="JVM_OPTS" value="-Droot.logger=error,file,stdout"/>
         <lein-params/>
       </exec>
